# maxdiffusion

./: .gitignore  BENCHMARK_RESULTS.md  MANIFEST.in  Makefile  README.md  VIZ_README.md  _typos.toml  bash.sh  bash_wan.sh  before_transformer_parity_maxdiffusion.py  benchmark_2d_context.sh  benchmark_batch_sweep.sh  benchmark_dp2_cp4.sh  benchmark_inference_2d.sh  check_conv_transpose.py  check_conv_transpose_2.py  check_conv_transpose_3.py  check_encoder_keys.py  check_learnable_registers.py  check_proj_in_weights.py  code_style.sh  constraints_gpu.txt  debug_audio_vae.py  debug_eval_shapes.py  docker_build_dependency_image.sh  docker_build_image.sh  docker_maxdiffusion_image_upload.sh  docker_upload_runner.sh  env.txt  gemini.md  gpu_multi_process_run.sh  ids.txt  input.ipynb  inspect_connectors.py  inspect_vae_checkpoint.py  inspect_vae_structure.py  install.sh  latents.npy  maxdiffusion.Dockerfile  maxdiffusion_dependencies.Dockerfile  (+47 more)
.gemini/commands/: gemini-review.toml
.github/: CODEOWNERS
.github/actions/setup-miniconda/: action.yml
.github/workflows/: AddPullReady.yml  CPUTests.yml  UnitTests.yml  UploadDockerImages.yml  XLML.yml  build_and_push_docker_image.yml  build_and_upload_images.sh  gemini-review.yml  pypi_release.yml
.jax_cache/: jit__normal-603c892101c79025f0162ba8b80b9ef307e022627b2bd27965500352ce64ecfc-cache  jit_conv_general_dilated-40eeb514f7ba6dcc0472abb46257452c230f25194f9d73dd1362199cb188bcb5-cache  jit_conv_general_dilated-6dc7ad124eb2ca27501862e2121d92517bfc2fadc918c5b756f913b4db65472b-cache
.mplconfig/: fontlist-v390.json
.tpu_logs/: tpu_driver.ERROR  tpu_driver.INFO  tpu_driver.WARNING  tpu_driver.t1v-n-198ece26-w-0.sagarchapara_google_com.log.ERROR.20260331-191058.2686214  tpu_driver.t1v-n-198ece26-w-0.sagarchapara_google_com.log.INFO.20260331-185650.2682529  tpu_driver.t1v-n-198ece26-w-0.sagarchapara_google_com.log.INFO.20260331-190204.2  tpu_driver.t1v-n-198ece26-w-0.sagarchapara_google_com.log.INFO.20260331-190654.2686214  tpu_driver.t1v-n-198ece26-w-0.sagarchapara_google_com.log.WARNING.20260331-185650.2682529  tpu_driver.t1v-n-198ece26-w-0.sagarchapara_google_com.log.WARNING.20260331-190204.2  tpu_driver.t1v-n-198ece26-w-0.sagarchapara_google_com.log.WARNING.20260331-190655.2686214
DeepCache/sdxl/: pipeline_stable_diffusion_xl.py
dependencies/requirements/base_requirements/: requirements.txt
dependencies/requirements/generated_requirements/: requirements.txt
docker/sdxl_inference/: entrypoint.sh  handler.py  model_loader.py  request_test.py
docker/sdxl_inference/dockerfile/: Dockerfile
docs/: README.md  attention_blocks_flowchart.md  data_README.md  dgx_spark.md  potential_optimizations.md  profiling.md  train_README.md  wan_animate_ulysses_fsdp_walkthrough.md  wan_sharding_report.md
docs/getting_started/: first_run.md  run_maxdiffusion_via_xpk.md
end_to_end/tpu/: eval_assert.py  run_wan_fast_inference.sh  test_sdxl_training_loss.sh
scripts/: prepare_wan_animate_assets.sh  run_wan_animate_parallelism_sweep.sh  wan_memory_roofline.py
sh_scripts/: 128_intoverflow.sh  filter_by_job.sh  first_pod_log.sh  get_pods.sh  linter_test.sh
src/: test_keys.py
src/aqt/jax/: aqt_conv_general.py
src/install_maxdiffusion_extra_deps/: __init__.py  extra_deps_from_github.txt  install_github_deps.py
src/maxdiffusion/: __init__.py  aot_cache.py  base_flux2klein.yml  batch_generate.py  checkpointing.py  checkpointing_file.py  common_types.py  configuration_utils.py  create_jflux_checkpoints.py  dependency_versions_check.py  dependency_versions_table.py  eval.py  flop_calc_utils.py  generate.py  generate_flux.py  generate_flux2klein.py  generate_flux2klein_9B.py  generate_flux_multi_res.py  generate_flux_pipeline.py  generate_ideogram.py  generate_jflux.py  generate_ltx2.py  generate_ltx_video.py  generate_sdxl.py  generate_sdxl_deepcache.py  generate_sdxl_quantized.py  generate_sdxl_replicated.py  generate_sdxl_replicated_load.py  generate_wan.py  generate_wan_animate.py  generate_wan_bsgt.py  generate_wan_pt.py  generate_zimage.py  image_processor.py  max_logging.py  max_utils.py  maxdiffusion_utils.py  mllog_utils.py  multihost_dataloading.py  pyconfig.py  (+16 more)
src/maxdiffusion/checkpointing/: __init__.py  base_stable_diffusion_checkpointer.py  checkpointing_utils.py  flux_checkpointer.py  ideogram_checkpointer.py  jflux_checkpointer.py  ltx2_checkpointer.py  wan_checkpointer.py  wan_checkpointer2_2.py  wan_checkpointer_2_1.py  wan_checkpointer_2_2.py  wan_checkpointer_i2v_2p1.py  wan_checkpointer_i2v_2p2.py  wan_vace_checkpointer_2_1.py  z_image_checkpointer.py
src/maxdiffusion/configs/: README.md  base14.yml  base15.yml  base21.yml  base_2_base.yml  base_2_base_inference.yml  base_2_eval.yml  base_flux.yml  base_flux2klein.yml  base_flux2klein_9B.yml  base_flux_dev.yml  base_flux_dev_multi_res.yml  base_flux_schnell.yml  base_fux_schnell.yml  base_ideogram.yml  base_jflux.yml  base_jflux_dev.yml  base_jflux_schnell.yml  base_wan_14b.yml  base_wan_14b_v7_8_2d_context.yml  base_wan_1_3b.yml  base_wan_27b.yml  base_wan_27b_v6e.yml  base_wan_animate.yml  base_wan_animate_27b.yml  base_wan_i2v_14b.yml  base_wan_i2v_27b.yml  base_wan_lora_14b.yml  base_wan_lora_27b.yml  base_wan_t2v.yml  base_xl.yml  base_xl_lightning.yml  base_zimage.yml  base_zimage_turbo.yml  ltx2_3_video.yml  ltx2_video.yml  ltx_video.yml
src/maxdiffusion/controlnet/: generate_controlnet_replicated.py  generate_controlnet_sdxl_replicated.py
src/maxdiffusion/data_preprocessing/: wan_pusav1_to_tfrecords.py  wan_txt2vid_data_preprocessing.py
src/maxdiffusion/dreambooth/: __init__.py  dreambooth_constants.py  train_dreambooth.py  train_dreambooth_2.py
src/maxdiffusion/inference/: README.md  __init__.py  (+4 more)
tests/models/: test_models_unet_2d_flax.py
tests/schedulers/: test_scheduler_flax.py  test_scheduler_rf.py  test_scheduler_unipc.py
utils/: update_dependency_table.py
xpk/: 1xv5p-512.sh  1xv6e-256.sh  2xv6e-256.sh  offline_eval.sh  run.sh  v5p-128.sh  v5p-128_dataloader.sh  v5p-128_e2e.sh  v5p-128_e2e_mlperf.sh  v5p-128_perf.sh  v5p-32.sh  v5p-32_eval.sh
(+505 files in other folders)
