# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/maxdiffusion/__init__.py"

[project]
name = "maxdiffusion"
dynamic = ["version", "optional-dependencies"]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python",
]
dependencies = []

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
tpu = ["dependencies/requirements/generated_requirements/tpu-requirements.txt"]
cuda12 = ["dependencies/requirements/generated_requirements/cuda12-requirements.txt"]

[project.urls]
Repository = "https://github.com/AI-Hypercomputer/maxdiffusion.git"
"Bug Tracker" = "https://github.com/AI-Hypercomputer/maxdiffusion/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/maxdiffusion", "src/install_maxdiffusion_extra_deps"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks.py"

[project.scripts]
install_maxdiffusion_github_deps = "install_maxdiffusion_extra_deps.install_github_deps:main"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823", "E402", "I001"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/maxdiffusion/utils/dummy_*.py" = ["F401"]
"src/maxdiffusion/pyconfig.py" = ["E721"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["maxdiffusion"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"